--- a/Compiler/CM1Compiler_CPP/CM1Compiler_CPP/CM1Compiler_CPP.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/CM1Compiler_CPP/CM1Compiler_CPP.vcxproj.filters
@@ -62,11 +62,6 @@
     <None Include="compiler-interface\src\entry_point.cm" />
     <None Include="compiler-interface\src\function_body.cm" />
     <None Include="compiler-interface\src\package_registry.cm" />
-    <None Include="compiler-interface\src\build_expression.cm" />
-    <None Include="compiler-interface\src\build_function.cm" />
-    <None Include="compiler-interface\src\entry_point.cm" />
-    <None Include="compiler-interface\src\function_body.cm" />
-    <None Include="compiler-interface\src\package_registry.cm" />
     <None Include="compiler-interface\**\*.*">
       <Filter>Resource Files</Filter>
     </None>
@@ -127,5 +122,113 @@
     <None Include="compiler-interface\**\*.*" />
     <None Include="compiler-interface\**\*.*" />
     <None Include="compiler-interface\**\*.*" />
+    <None Include="compiler-interface\src\array.cm" />
+    <None Include="compiler-interface\src\boolean.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\operator.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\string.cm" />
+    <None Include="compiler-interface\src\array.cm" />
+    <None Include="compiler-interface\src\boolean.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\operator.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\string.cm" />
+    <None Include="compiler-interface\src\array.cm" />
+    <None Include="compiler-interface\src\boolean.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\operator.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\string.cm" />
+    <None Include="compiler-interface\src\array.cm" />
+    <None Include="compiler-interface\src\boolean.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\operator.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\string.cm" />
+    <None Include="compiler-interface\src\array.cm" />
+    <None Include="compiler-interface\src\boolean.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\operator.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\string.cm" />
+    <None Include="compiler-interface\src\array.cm" />
+    <None Include="compiler-interface\src\boolean.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\operator.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\string.cm" />
+    <None Include="compiler-interface\src\array.cm" />
+    <None Include="compiler-interface\src\boolean.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\operator.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\string.cm" />
+    <None Include="compiler-interface\src\array.cm" />
+    <None Include="compiler-interface\src\boolean.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\operator.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\string.cm" />
+    <None Include="compiler-interface\src\array.cm" />
+    <None Include="compiler-interface\src\boolean.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\operator.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\string.cm" />
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
