--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
@@ -186,6 +186,9 @@
     <ClInclude Include="NullValueException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Validation\SemanticModelValidationException.h">
+      <Filter>Header Files\Validation</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Function.cpp">
@@ -279,6 +282,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="printStackTrace.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Validation\SemanticModelValidationException.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
