--- a/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="Environment.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AttributeSpecialFunctionsExecution.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CompilationUnitDatabaseBuilder.cpp">
