c binding generation works

--- a/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
@@ -149,5 +149,8 @@
     <ClCompile Include="Environment.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AttributeSpecialFunctionsExecution.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
