--- a/Compiler/CM1Compiler_CPP/CM1Compiler_CPP/CM1Compiler_CPP.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/CM1Compiler_CPP/CM1Compiler_CPP.vcxproj.filters
@@ -52,11 +52,6 @@
     <None Include="compiler-interface\src\package_registry.cm" />
     <None Include="compiler-interface\src\entry_point.cm" />
     <None Include="compiler-interface\src\package_registry.cm" />
-    <None Include="compiler-interface\src\build_expression.cm" />
-    <None Include="compiler-interface\src\build_function.cm" />
-    <None Include="compiler-interface\src\entry_point.cm" />
-    <None Include="compiler-interface\src\function_body.cm" />
-    <None Include="compiler-interface\src\package_registry.cm" />
     <None Include="compiler-interface\**\*.*">
       <Filter>Resource Files</Filter>
     </None>
@@ -122,6 +117,11 @@
     <None Include="compiler-interface\src\entry_point.cm" />
     <None Include="compiler-interface\src\function_body.cm" />
     <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
     <None Include="compiler-interface\src\array.cm" />
     <None Include="compiler-interface\src\boolean.cm" />
     <None Include="compiler-interface\src\build_expression.cm" />
@@ -185,15 +185,6 @@
     <None Include="compiler-interface\src\operator.cm" />
     <None Include="compiler-interface\src\package_registry.cm" />
     <None Include="compiler-interface\src\string.cm" />
-    <None Include="compiler-interface\src\array.cm" />
-    <None Include="compiler-interface\src\boolean.cm" />
-    <None Include="compiler-interface\src\build_expression.cm" />
-    <None Include="compiler-interface\src\build_function.cm" />
-    <None Include="compiler-interface\src\entry_point.cm" />
-    <None Include="compiler-interface\src\function_body.cm" />
-    <None Include="compiler-interface\src\operator.cm" />
-    <None Include="compiler-interface\src\package_registry.cm" />
-    <None Include="compiler-interface\src\string.cm" />
     <None Include="compiler-interface\**\*.*">
       <Filter>Resource Files</Filter>
     </None>
@@ -221,6 +212,16 @@
     <None Include="compiler-interface\**\*.*">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="compiler-interface\**\*.*" />
+    <None Include="compiler-interface\**\*.*" />
+    <None Include="compiler-interface\**\*.*" />
+    <None Include="compiler-interface\**\*.*" />
+    <None Include="compiler-interface\**\*.*" />
+    <None Include="compiler-interface\**\*.*" />
+    <None Include="compiler-interface\**\*.*" />
+    <None Include="compiler-interface\**\*.*" />
+    <None Include="compiler-interface\**\*.*" />
+    <None Include="compiler-interface\**\*.*" />
     <None Include="compiler-interface\**\*.*" />
     <None Include="compiler-interface\**\*.*" />
     <None Include="compiler-interface\**\*.*" />
