added further work section

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ Papers/SDM1/out/article.pdf
 /out
 /Libraries/out
 /Compiler/CM1Compiler_CPP/TestResults
+Papers/WUT-Master-Thesis/main.synctex(busy)
