--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ Papers/WUT-Master-Thesis/main.pdf
 Papers/WUT-Master-Thesis/main.run.xml
 Papers/WUT-Master-Thesis/main.synctex.gz
 Papers/WUT-Master-Thesis/main.toc
+Papers/WUT-Master-Thesis/out/
