--- a/Compiler/CM1Compiler_CPP/CM1Compiler_CPP/CMakeLists.txt
+++ b/Compiler/CM1Compiler_CPP/CM1Compiler_CPP/CMakeLists.txt
@@ -36,161 +36,12 @@ set(ALL_FILES
 ################################################################################
 add_executable(${PROJECT_NAME} ${ALL_FILES})
 
-use_props(${PROJECT_NAME} "${CMAKE_CONFIGURATION_TYPES}" "${DEFAULT_CXX_PROPS}")
-set(ROOT_NAMESPACE CM1CompilerCPP)
-
 set_target_properties(${PROJECT_NAME} PROPERTIES
-    VS_GLOBAL_KEYWORD "Win32Proj"
+    TARGET_NAME_DEBUGSTATIC   "cm1c"
+    TARGET_NAME_DEBUG         "cm1c"
+    TARGET_NAME_RELEASESTATIC "cm1c"
+    TARGET_NAME_RELEASE       "cm1c"
 )
-################################################################################
-# Target name
-################################################################################
-if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
-    set_target_properties(${PROJECT_NAME} PROPERTIES
-        TARGET_NAME_DEBUGSTATIC   "cm1c"
-        TARGET_NAME_DEBUG         "cm1c"
-        TARGET_NAME_RELEASESTATIC "cm1c"
-        TARGET_NAME_RELEASE       "cm1c"
-    )
-elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
-    set_target_properties(${PROJECT_NAME} PROPERTIES
-        TARGET_NAME_DEBUGSTATIC   "cm1c"
-        TARGET_NAME_DEBUG         "cm1c"
-        TARGET_NAME_RELEASESTATIC "cm1c"
-        TARGET_NAME_RELEASE       "cm1c"
-    )
-endif()
-################################################################################
-# Compile definitions
-################################################################################
-if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
-    target_compile_definitions(${PROJECT_NAME} PRIVATE
-        "$<$<CONFIG:DebugStatic>:"
-            "_DEBUG"
-        ">"
-        "$<$<CONFIG:Debug>:"
-            "_DEBUG"
-        ">"
-        "$<$<CONFIG:ReleaseStatic>:"
-            "NDEBUG"
-        ">"
-        "$<$<CONFIG:Release>:"
-            "NDEBUG"
-        ">"
-        "_CONSOLE;"
-        "_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;"
-        "UNICODE;"
-        "_UNICODE"
-    )
-elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
-    target_compile_definitions(${PROJECT_NAME} PRIVATE
-        "$<$<CONFIG:DebugStatic>:"
-            "_DEBUG"
-        ">"
-        "$<$<CONFIG:Debug>:"
-            "_DEBUG"
-        ">"
-        "$<$<CONFIG:ReleaseStatic>:"
-            "NDEBUG"
-        ">"
-        "$<$<CONFIG:Release>:"
-            "NDEBUG"
-        ">"
-        "WIN32;"
-        "_CONSOLE;"
-        "_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;"
-        "UNICODE;"
-        "_UNICODE"
-    )
-endif()
-
-################################################################################
-# Compile and link options
-################################################################################
-if(MSVC)
-    if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
-        target_compile_options(${PROJECT_NAME} PRIVATE
-            $<$<CONFIG:ReleaseStatic>:
-                /Oi;
-                /Gy
-            >
-            $<$<CONFIG:Release>:
-                /Oi;
-                /Gy
-            >
-            /permissive-;
-
-            /sdl-;
-            /W3;
-            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
-            ${DEFAULT_CXX_EXCEPTION_HANDLING};
-            /Za
-        )
-    elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
-        target_compile_options(${PROJECT_NAME} PRIVATE
-            $<$<CONFIG:ReleaseStatic>:
-                /Oi;
-                /Gy
-            >
-            $<$<CONFIG:Release>:
-                /Oi;
-                /Gy
-            >
-            /permissive-;
-
-            /sdl-;
-            /W3;
-            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
-            ${DEFAULT_CXX_EXCEPTION_HANDLING};
-            /Za
-        )
-    endif()
-    if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
-        target_link_options(${PROJECT_NAME} PRIVATE
-            $<$<CONFIG:DebugStatic>:
-                /DEBUG;
-                /INCREMENTAL
-            >
-            $<$<CONFIG:Debug>:
-                /DEBUG;
-                /INCREMENTAL
-            >
-            $<$<CONFIG:ReleaseStatic>:
-                /OPT:REF;
-                /OPT:ICF;
-                /INCREMENTAL:NO
-            >
-            $<$<CONFIG:Release>:
-                /OPT:REF;
-                /OPT:ICF;
-                /INCREMENTAL:NO
-            >
-            /SUBSYSTEM:CONSOLE
-        )
-    elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
-        target_link_options(${PROJECT_NAME} PRIVATE
-            $<$<CONFIG:DebugStatic>:
-                /DEBUG;
-                /INCREMENTAL
-            >
-            $<$<CONFIG:Debug>:
-                /DEBUG;
-                /INCREMENTAL
-            >
-            $<$<CONFIG:ReleaseStatic>:
-                /OPT:REF;
-                /OPT:ICF;
-                /INCREMENTAL:NO
-            >
-            $<$<CONFIG:Release>:
-                /OPT:REF;
-                /OPT:ICF;
-                /INCREMENTAL:NO
-            >
-            /SUBSYSTEM:CONSOLE
-        )
-    endif()
-endif()
 
 ################################################################################
 # Dependencies
@@ -207,9 +58,10 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 find_package(Boost 1.76.0 COMPONENTS program_options REQUIRED )
 target_include_directories(${PROJECT_NAME} PRIVATE ${Boost_INCLUDE_DIRS})
 install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_BINARY_DIR}/bin)
-set(Boost_USE_STATIC_LIBS ON)
 link_directories(${Boost_LIBRARY_DIRS})
 link_directories(${Boost_LIBRARY_DIR})
+find_package(ZLIB REQUIRED)
+target_link_libraries(${PROJECT_NAME} PRIVATE ZLIB::ZLIB)
 
 TARGET_LINK_LIBRARIES( ${PROJECT_NAME} LINK_PUBLIC ${Boost_LIBRARIES} )
 
