--- a/Compiler/CM1Compiler_CPP/Compiler/CMakeLists.txt
+++ b/Compiler/CM1Compiler_CPP/Compiler/CMakeLists.txt
@@ -84,118 +84,6 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
     VS_GLOBAL_KEYWORD "Win32Proj"
 )
 ################################################################################
-# Compile definitions
-################################################################################
-if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
-    target_compile_definitions(${PROJECT_NAME} PRIVATE
-        "$<$<CONFIG:DebugStatic>:"
-            "_DEBUG"
-        ">"
-        "$<$<CONFIG:Debug>:"
-            "_DEBUG"
-        ">"
-        "$<$<CONFIG:ReleaseStatic>:"
-            "NDEBUG"
-        ">"
-        "$<$<CONFIG:Release>:"
-            "NDEBUG"
-        ">"
-        "_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING;"
-        "_LIB;"
-        "_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;"
-        "UNICODE;"
-        "_UNICODE"
-    )
-elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
-    target_compile_definitions(${PROJECT_NAME} PRIVATE
-        "$<$<CONFIG:DebugStatic>:"
-            "_DEBUG"
-        ">"
-        "$<$<CONFIG:Debug>:"
-            "_DEBUG"
-        ">"
-        "$<$<CONFIG:ReleaseStatic>:"
-            "NDEBUG"
-        ">"
-        "$<$<CONFIG:Release>:"
-            "NDEBUG"
-        ">"
-        "_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING;"
-        "WIN32;"
-        "_LIB;"
-        "_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;"
-        "UNICODE;"
-        "_UNICODE"
-    )
-endif()
-
-################################################################################
-# Compile and link options
-################################################################################
-if(MSVC)
-    if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
-        target_compile_options(${PROJECT_NAME} PRIVATE
-            $<$<CONFIG:ReleaseStatic>:
-                /Oi;
-                /Gy
-            >
-            $<$<CONFIG:Release>:
-                /Oi;
-                /Gy
-            >
-            /permissive-;
-
-            /sdl-;
-            /W3;
-            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
-            ${DEFAULT_CXX_EXCEPTION_HANDLING};
-            /Y-
-        )
-    elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
-        target_compile_options(${PROJECT_NAME} PRIVATE
-            $<$<CONFIG:ReleaseStatic>:
-                /Oi;
-                /Gy
-            >
-            $<$<CONFIG:Release>:
-                /Oi;
-                /Gy
-            >
-            /permissive-;
-
-            /sdl-;
-            /W3;
-            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
-            ${DEFAULT_CXX_EXCEPTION_HANDLING};
-            /Y-
-        )
-    endif()
-    if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x64")
-        target_link_options(${PROJECT_NAME} PRIVATE
-            $<$<CONFIG:ReleaseStatic>:
-                /OPT:REF;
-                /OPT:ICF
-            >
-            $<$<CONFIG:Release>:
-                /OPT:REF;
-                /OPT:ICF
-            >
-        )
-    elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "x86")
-        target_link_options(${PROJECT_NAME} PRIVATE
-            $<$<CONFIG:ReleaseStatic>:
-                /OPT:REF;
-                /OPT:ICF
-            >
-            $<$<CONFIG:Release>:
-                /OPT:REF;
-                /OPT:ICF
-            >
-        )
-    endif()
-endif()
-
-################################################################################
 # Dependencies
 ################################################################################
 # Link with other targets.
@@ -206,8 +94,12 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
     Parser
 )
 
-use_package(${PROJECT_NAME} boost 1.76.0.0)
-use_package(${PROJECT_NAME} boost_regex-vc141 1.76.0.0)
+find_package(Boost 1.76.0 COMPONENTS regex REQUIRED )
+target_include_directories(${PROJECT_NAME} PRIVATE ${Boost_INCLUDE_DIRS})
+install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_BINARY_DIR}/bin)
+link_directories(${Boost_LIBRARY_DIRS})
+link_directories(${Boost_LIBRARY_DIR})
+
 find_package(Microsoft.GSL CONFIG REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE Microsoft.GSL::GSL)
 find_package(LLVM CONFIG REQUIRED)
